Añadida seguridad por roles en vistas
Fix: botón de admin visible solo para ADMINISTRADOR

Faltan algunas mejoras pero es un avance